# gps_homework

./: .gitignore  .gitmodules
HW1/: CMakeLists.txt  HW1.m
HW1/include/: stoichastics.h
HW1/src/: main.cpp
HW2/: HW2.asv  HW2.m  HW2_data.txt  HW2_data_backup.txt
HW3/: HW3.m
HW3/report/: report.fls  report.tex
HW4/matlab/: HW4.m  p1.m  p2.m  p3.m  p4.m  p6.m  p7.m
HW4/matlab/functions/: GPS_LS.m  LS.m  carrier_smooth.m  dPvtSolve.m  dualFreqIF.m  enutoecef.m  ephem_to_sv_pos.m  genCA.m  ifen_parser.m  pvtSolve.m  rtkPvtSolve.m  scorr.m  sv_states.m  syncTime.m  upsample.m
HW4/matlab/functions/_OBS/: wldl.m  zTransform.m
HW4/matlab/functions/iono/: ampVertDelay.m  angleUserAndEProjOfIonoIntPoint.m  calcIonoCorr.m  calcLocalTime.m  calcPhase.m  geodetLatEProjOfIonoIntPoint.m  geodetLonEProjOfIonoIntPoint.m  geomagLatEProjOfIonoIntPoint.m  ionoModel.m  modelPeriod.m  obFact.m
HW4/matlab/functions/plotting/: plotPosError.m
HW4/report/: report.tex
functions/: eceftoenu.m  ephem_to_sv_pos.m  genCA.m  gnssPVT.m  gpsStats.m  sv_positions.m
